# ubuntu-dev-ansible

./: .ansible-lint  .pre-commit-config.yaml  README.md  ansible.cfg  cleanup_local_git_branches.py  dprint.json  justfile  playbook.yml  pyproject.toml  requirements.yml
.claude/skills/discover/: SKILL.md  discarded.md
callback_plugins/: changed_recap.py
roles/thibaut/files/: all-repos.json  gnome-terminal-profiles.dconf  my-repos.json
roles/thibaut/files/dotfiles/: bash_aliases  gitconfig_opensource  gitignore  justfile
roles/thibaut/files/dotfiles/config/: ripgreprc
roles/thibaut/files/dotfiles/config/dust/: config.toml
roles/thibaut/files/dotfiles/config/karabiner/: karabiner.json
roles/thibaut/files/dotfiles/ipython/profile_default/startup/: 00-imports.py
roles/thibaut/files/dotfiles/zed/: settings.json
roles/thibaut/tasks/: all-repos.yml  apt.yml  apt_installs.yml  apt_repositories.yml  bash.yml  dotfiles.yml  gnome.yml  installs.yml  llm.yml  main.yml  slack.yml  ssh.yml  symlinks.yml
roles/thibaut/tasks/install/: awscli_v2.yml  dprint.yml  jetbrains-toolbox.yml  mongodb-compass.yml  slack.yml
roles/thibaut/tasks/system/: cleanup.yml  docker_cleanup.yml  dotfiles.yml  grub.yml  ssh.yml  symlinks.yml
roles/thibaut/vars/: main.yml
